--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,6 @@ body {
     background-position: center;
     color: white;
     height: 100vh;
-    /* width: 35vw; */
 }
 
 .banner-container {
@@ -67,12 +66,12 @@ body {
     background-color: #f9fafb;
 }
 
-.text-top-container, .form-container {
+.text-top-container, .form-container, .text-bottom-container {
     padding-left: 5%;
+    /* padding: 30px 0px 30px 50px; */
 }
 
 .text-top-container {
-    /* padding: 2% 15% 2% 5%; */
     max-width: 80%;
     font-size: 2rem;
     font-weight: bold;
@@ -82,4 +81,67 @@ body {
     display: flex;
     flex-direction: column;
     background-color: white;
+    flex-wrap: wrap;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    justify-content: space-evenly;
+    flex: 1;
+}
+
+.form-container > h1 {
+    margin: 0;
+}
+
+.form-details, form {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.form-details {
+    column-gap: 150px;
+    row-gap: 20px;
+}
+
+.form-user-input {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-user-input > * {
+    font-size: 0.9rem;
+    letter-spacing: 1.5px;
+}
+
+.form-user-input > input {
+    height: 1.5rem;
+    width: 20rem;
+    border-radius: 5px;
+    border: 1px solid #e4e5e7;
+}
+
+.text-bottom-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex: 1;
+    padding-top: 50px;
+}
+
+.text-bottom-container > button {
+    padding: 15px 60px;
+    background-color: #596d48;
+    color: white;
+    border-radius: 10px;
+    font-family: inherit;
+    font-size: 1.1rem;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    /* box-shadow: 10px 10px 10px black; */
+}
+
+.text-bottom-container a {
+    color: #596d48;
+    text-decoration: none;
+    font-weight: bold;
 }
