--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,6 @@ body {
 
 .text-top-container, .form-container, .text-bottom-container {
     padding-left: 5%;
-    /* padding: 30px 0px 30px 50px; */
 }
 
 .text-top-container {
@@ -86,6 +85,7 @@ body {
     padding-bottom: 30px;
     justify-content: space-evenly;
     flex: 1;
+    box-shadow: 0px 5px 5px 1px rgba(0,0,0,0.1);
 }
 
 .form-container > h1 {
@@ -117,6 +117,18 @@ body {
     width: 20rem;
     border-radius: 5px;
     border: 1px solid #e4e5e7;
+    transition: 0.2s ease-out;
+    outline: none;
+}
+
+.form-user-input > input:focus {
+    border: 1px solid #2b6af5;
+    scale: 1.02;
+    box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.3);
+}
+
+.form-user-input > input:invalid {
+    border: 1px solid #ff4937;
 }
 
 .text-bottom-container {
@@ -137,7 +149,7 @@ body {
     font-weight: bold;
     border: none;
     cursor: pointer;
-    /* box-shadow: 10px 10px 10px black; */
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 }
 
 .text-bottom-container a {
